src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>OpportunityProductList__c</fullName>
        <description>SFDC1-593 The field is concatenated list of products from related Opportunity list</description>
        <label>Opportunity Product List</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OpportunityReference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-309 Lookup to Opportunity</description>
        <inlineHelpText>This value will be populated when the ticket is spawned from an opportunity</inlineHelpText>
        <label>Opportunity Reference</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases (Opportunity Reference)</relationshipLabel>
        <relationshipName>OpportunityReferenceCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-88 Opportunity related to the issue. If there are many, pick 1 and mention additional in the detailed description, at this time we are only making a 1:1 relationship</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderManagementRegion__c</fullName>
        <description>SFDC1-6148 : This field will hold Order Management Region</description>
        <label>Order Management Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Markit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderReason__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Order Reason</inlineHelpText>
        <label>Order Reason</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDCase__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>Cse{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID Case</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>POAttached__c</fullName>
        <formula>TEXT(Contract__r.POAttached__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PO Attached</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PORequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-8434 PO Required field will need to be added to the case.</description>
        <inlineHelpText>PO Required? is populated from the Auto Renewal Opportunity</inlineHelpText>
        <label>PO Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Postal__c</fullName>
        <description>SFDC1-965 &amp; SFDC1-638 Postal/Zip code for new Account creation through Case</description>
        <inlineHelpText>Postal code for new Account creation through Case</inlineHelpText>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousOwnerUser__c</fullName>
        <description>SFDC1-5934, To store the value of Previous OwnerId if its user.</description>
        <label>Previous Owner(user)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousQueue__c</fullName>
        <description>SFDC1-5943, to store the previous queue to which case was allocated to. Will be always populated via workflow.</description>
        <inlineHelpText>Updated by Salesforce if case has moved Queues</inlineHelpText>
        <label>Previous Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriceTool__c</fullName>
        <description>SFDC1-6647, Selection List (It would be good is we could administer this list, to keep it current)</description>
        <label>Price Tool</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IHS AD_S Pricing Workbook – 2017</fullName>
                </value>
                <value>
                    <fullName>IHS AD_S Pricing Workbook – 2018</fullName>
                </value>
                <value>
                    <fullName>IHS Automotive Pricing Workbook - 2017</fullName>
                </value>
                <value>
                    <fullName>IHS Chemical Pricing Workbook – 2017</fullName>
                </value>
                <value>
                    <fullName>IHS Chemical Pricing Workbook – 2018</fullName>
                </value>
                <value>
                    <fullName>IHS ECR Pricing Workbook - 2017</fullName>
                </value>
                <value>
                    <fullName>IHS EI Capabilities Pricing Workbook – 2017</fullName>
                </value>
                <value>
                    <fullName>IHS EI Capabilities Pricing Workbook – 2018</fullName>
                </value>
                <value>
                    <fullName>ET-US Pricing Tool 2017</fullName>
                </value>
                <value>
                    <fullName>ET-PE Pricing 2017</fullName>
                </value>
                <value>
                    <fullName>ET-US Publication Prices 2017</fullName>
                </value>
                <value>
                    <fullName>ET-Premier Price Book SAP 2016</fullName>
                </value>
                <value>
                    <fullName>ET-US Spatial Layers</fullName>
                </value>
                <value>
                    <fullName>ET-International Pricing Tool 2017</fullName>
                </value>
                <value>
                    <fullName>ET-International Pricing Tool 2018</fullName>
                </value>
                <value>
                    <fullName>ET-Canada 2017</fullName>
                </value>
                <value>
                    <fullName>ET-Engineering Software</fullName>
                </value>
                <value>
                    <fullName>ET-Kingdom Price List 2017</fullName>
                </value>
                <value>
                    <fullName>ET-ODS Pricing 2017</fullName>
                </value>
                <value>
                    <fullName>ET-ODS Pricing 2018</fullName>
                </value>
                <value>
                    <fullName>ET-PE 2017</fullName>
                </value>
                <value>
                    <fullName>ET-Vantage 2017</fullName>
                </value>
                <value>
                    <fullName>E&amp;PD - Commercial North America-CML Pricing Model – 2017</fullName>
                </value>
                <value>
                    <fullName>E&amp;PD - Combined Comm NA-GSA Pricing Model – 2017</fullName>
                </value>
                <value>
                    <fullName>E&amp;PD - Combined Comm NA-GSA Pricing Model – 2018</fullName>
                </value>
                <value>
                    <fullName>E&amp;PD - Combined Comm NA-LOC Pricing Model – 2017</fullName>
                </value>
                <value>
                    <fullName>E&amp;PD - Combined Comm NA-LOC Pricing Model – 2018</fullName>
                </value>
                <value>
                    <fullName>E&amp;PD - International Outside North America-CIM Pricing Model -2017</fullName>
                </value>
                <value>
                    <fullName>IHS PD Pricing Workbook – 2015 (RTCA &amp; AIA/NAS products)</fullName>
                </value>
                <value>
                    <fullName>IHS Goldfire Pricing 2016</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-6246 Lookup to Product Family</description>
        <label>Product Family</label>
        <referenceTo>Family__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-652 Required for Case Additional Fields Setup.
SFDC1-7120 Field used in filter condition is deleted. So Removing from here.</description>
        <inlineHelpText>Examples - Jane&apos;s Online - Petra - World Market Monitor</inlineHelpText>
        <label>Product Group</label>
        <referenceTo>ProductGroup__c</referenceTo>
        <relationshipLabel>Cases (Product Group)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductModule__c</fullName>
        <description>SFDC1-2649 : This field will hold the Product Module Value from Additional Case field, used in Email Templates.</description>
        <formula>TEXT( AdditionalFields__r.ProductModule__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductVersion__c</fullName>
        <description>SFDC1-2649 : This field will hold the Product Version Value from Additional Case field, used in Email Templates.</description>
        <formula>TEXT( AdditionalFields__r.ProductVersion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <description>SFDC1-6995 Used for RETAIL RMA documents</description>
        <label>RMA #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonForRejection__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>Reason for Rejection</inlineHelpText>
        <label>Reason For Rejection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract Amendment Required</fullName>
                </value>
                <value>
                    <fullName>Contract Executed by the Customer</fullName>
                </value>
                <value>
                    <fullName>EU Company VAT #</fullName>
                </value>
                <value>
                    <fullName>Incorrect Data Entry</fullName>
                </value>
                <value>
                    <fullName>Incorrect Entity Used</fullName>
                </value>
                <value>
                    <fullName>RAD Approval Required</fullName>
                </value>
                <value>
                    <fullName>Referenced Master Agreement Incorrect/Omitted</fullName>
                </value>
                <value>
                    <fullName>Special Membership Authorization</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>SFDC1-88  Displays requestor&apos;s region</description>
        <formula>TEXT( Requestor__r.UserRegion__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestDate__c</fullName>
        <description>SFDC1-271 for Response Management Cases.</description>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestRegion__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Request Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Central/South America</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestType__c</fullName>
        <description>SFDC1-271 for Response Management Cases.SFDC1-7629 Response Management - Update Lighting Console
SFDC1-8125: Added picklist values</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business Continuity</fullName>
                </value>
                <value>
                    <fullName>Client Query</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Due Diligence</fullName>
                </value>
                <value>
                    <fullName>Follow Up Questions</fullName>
                </value>
                <value>
                    <fullName>Formatting</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>RFP – Agreement</fullName>
                </value>
                <value>
                    <fullName>RFP – Follow Up</fullName>
                </value>
                <value>
                    <fullName>RFP – Grant</fullName>
                </value>
                <value>
                    <fullName>RFP – NDA</fullName>
                </value>
                <value>
                    <fullName>RFP – Prequalification</fullName>
                </value>
                <value>
                    <fullName>RFP – Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP – Request for Information</fullName>
                </value>
                <value>
                    <fullName>RFP – Request for Proposal</fullName>
                </value>
                <value>
                    <fullName>RFP – Request for Quote</fullName>
                </value>
                <value>
                    <fullName>RFP – Request for Submission</fullName>
                </value>
                <value>
                    <fullName>Risk Assessment</fullName>
                </value>
                <value>
                    <fullName>Security Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Site Visit</fullName>
                </value>
                <value>
                    <fullName>SSAE Request</fullName>
                </value>
                <value>
                    <fullName>Vendor Questionnaire</fullName>
                </value>
                <value>
                    <fullName>Risk Reporting</fullName>
                </value>
                <value>
                    <fullName>Acquisition Onboarding</fullName>
                </value>
                <value>
                    <fullName>Assignments and Transfer</fullName>
                </value>
                <value>
                    <fullName>Continuation Letters</fullName>
                </value>
                <value>
                    <fullName>Contract Attachments</fullName>
                </value>
                <value>
                    <fullName>Contract Templates</fullName>
                </value>
                <value>
                    <fullName>Data Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-88  Requestor for the case</description>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResolutionDescription__c</fullName>
        <description>SFDC1-251 A long description on how the case was resolved.</description>
        <inlineHelpText>Please populate a detailed description of how the case was resolved.</inlineHelpText>
        <label>Resolution Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>SFDC1-593 This is the sum of Annual revenue from the list of contracts related</description>
        <label>Revenue</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunCaseAssignmentRule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-7574 Custom field for checking if case was edited or created with &apos;Assign using Active Assignment Rule&apos; checked.</description>
        <inlineHelpText>Custom field for checking if case was edited or created with &apos;Assign using Active Assignment Rule&apos; checked.</inlineHelpText>
        <label>Run Case Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAPContractOrder__c</fullName>
        <description>SFDC1-6148 : This field will hold value of SAP Contract/Order #</description>
        <label>SAP Contract/Order #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SAPContract__c</fullName>
        <description>SFDC1-7738: New field for Order Management Case</description>
        <inlineHelpText>SAP Contract #</inlineHelpText>
        <label>SAP Contract #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAPProcessedContractNumber__c</fullName>
        <description>SFDC1-9452 - SAP Processed Contract # field needs to be added to the Order Management Case Record Type</description>
        <inlineHelpText>SAP Processed Contract Number</inlineHelpText>
        <label>SAP Processed Contract Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDO__c</fullName>
        <description>SFDC1-6995 Used for all RETAIL inquiries to determine the SDO</description>
        <label>SDO</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceLink__c</fullName>
        <description>SFDC1-1351: Stores URL to ServiceNow ticket
SFDC1-4998: Rename of field label Service Link to ServiceNow Link</description>
        <inlineHelpText>Copy Then Paste URL from ServiceNow for this Outage Incident</inlineHelpText>
        <label>ServiceNow Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SkillLevel__c</fullName>
        <description>SFDC1-251 Skill level that was required for case resolution.</description>
        <label>Skill</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - General</fullName>
                </value>
                <value>
                    <fullName>2 - Technical</fullName>
                </value>
                <value>
                    <fullName>3 - Technical Expert</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SourceLead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5752 - This would contain lead information from where case is created.</description>
        <inlineHelpText>Lead information from where case was created.</inlineHelpText>
        <label>Source Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases (Source Lead)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StandardResponsesUsed__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Standard Responses Used</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>SFDC1-965 &amp; SFDC1-683 State field for new Account creation through Case</description>
        <inlineHelpText>State for new Account creation through Case</inlineHelpText>
        <label>State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFDC1-6995 Used to determine if the inquiry is for a RETAIL subscription or not</description>
        <label>Subscription?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <description>SFDC1-251 This field contains all the dependent values based on the Type field.
SFDC1-4372 Updating picklist fields. SFDC1-5969 Adding new picklist values
SFDC1-5970 Adding new picklist values SFDC1-6403 Adding new picklist values
SFDC1-5650 Removed 3 picklist values
SFDC1-8125: Added new picklist values for contract management
SFDC1-6471 : Removed : &apos;Order Mgmt/Delivery Helpdesk&apos; value
SFDC1-6250 Added &quot;Order Mgmt/Delivery Helpdesk&quot; values and dependencies
SFDC1-6944: Reorder the picklist values and update spelling
SFDC1-6990: Adding new values for Response Management
SFDC1-7629 Response Management - Update Lighting Console
SFDC1-7730: Adding new picklist values for Customer care
SFDC1-8644: Adding new picklist values for Customer care
SFDC1-9075: Adding new picklist value for OMDH</description>
        <inlineHelpText>Categorization of the type of problem being reported. Values are filtered by the Type field.</inlineHelpText>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>6WP Exception</fullName>
                </value>
                <value>
                    <fullName>A&amp;T</fullName>
                </value>
                <value>
                    <fullName>Account Maintenance</fullName>
                </value>
                <value>
                    <fullName>Acquisition</fullName>
                </value>
                <value>
                    <fullName>Acquisition Onboarding</fullName>
                </value>
                <value>
                    <fullName>RFP – Agreement</fullName>
                </value>
                <value>
                    <fullName>Alliance</fullName>
                </value>
                <value>
                    <fullName>Apex class</fullName>
                </value>
                <value>
                    <fullName>Approval requests (pricing, legal entity exceptions, payment terms, etc)</fullName>
                </value>
                <value>
                    <fullName>Assignment rule</fullName>
                </value>
                <value>
                    <fullName>Assignments and Transfer</fullName>
                </value>
                <value>
                    <fullName>Auto reply emails</fullName>
                </value>
                <value>
                    <fullName>Bankruptcy</fullName>
                </value>
                <value>
                    <fullName>Bespoke (High Complexity)</fullName>
                </value>
                <value>
                    <fullName>Billing Frequency</fullName>
                </value>
                <value>
                    <fullName>Bill-to</fullName>
                </value>
                <value>
                    <fullName>Bug/Error</fullName>
                </value>
                <value>
                    <fullName>Bug Report</fullName>
                </value>
                <value>
                    <fullName>Bulk Upload</fullName>
                </value>
                <value>
                    <fullName>Business Continuity</fullName>
                </value>
                <value>
                    <fullName>Channel Partner</fullName>
                </value>
                <value>
                    <fullName>Channel Partner Commission Rate</fullName>
                </value>
                <value>
                    <fullName>Charge Clarification</fullName>
                </value>
                <value>
                    <fullName>Client Data Reports</fullName>
                </value>
                <value>
                    <fullName>Client Query</fullName>
                </value>
                <value>
                    <fullName>Company Name Change</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Connection Issues</fullName>
                </value>
                <value>
                    <fullName>Consulting Referral Incentive</fullName>
                </value>
                <value>
                    <fullName>Contact Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamCollaboration__c</fullName>
        <description>SFDC1-6870: Adding field for Response Management</description>
        <label>Team Collaboration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Buisness Continuity</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>GTS</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>Information Security</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Product Team</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TeamSelect__c</fullName>
        <description>SFDC1-6148 : This field will hold the value of Team</description>
        <label>Team Select</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivery</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TimeSpentMinutes__c</fullName>
        <description>SFDC1-251 This field contains the amount of minutes required to resolve the case.</description>
        <inlineHelpText>Populate the amount of minutes required to resolve the case.</inlineHelpText>
        <label>Time Spent(Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalContractValueNew__c</fullName>
        <description>SFDC1-8775: Copied from Contract  via trigger</description>
        <inlineHelpText>Total Contract Value</inlineHelpText>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalQuestions__c</fullName>
        <description>SFDC1-271 Required for Response Management Cases.</description>
        <label>Total Questions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>SFDC1-6289: Field that campures the username for JTL record type</description>
        <inlineHelpText>Enter the UserName</inlineHelpText>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AUTOSGPHDAmericas_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AUTOS | GPHD Americas</label>
        <queue>AUTOSGPHDAmericas</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AUTOSGPHDDE_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AUTOS | GPHD DE</label>
        <queue>AUTOSGPHDDE</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AUTOSGPHDUK_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AUTOS | GPHD UK</label>
        <queue>AUTOSGPHDUK</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AccountsReceivable_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Accounts Receivable</label>
        <queue>AccountsReceivable</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>AutoFulfillment_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Auto Fulfillment</label>
        <queue>AutoFulfillment</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BISWorkRequest_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>BIS Work Request</label>
        <queue>BISWorkRequest</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BRS_Production_Support_UNASSIGNED</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OWNER_NAME</field>
            <operation>equals</operation>
            <value>FM | Markit Research Manager,FM | MarkitHub</value>
        </filters>
        <label>BRS Production Support - UNASSIGNED</label>
    </listViews>
    <listViews>
        <fullName>CDDistribution_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CD Distribution</label>
        <queue>CDDistribution</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CMContractManagement_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CM | Contract Management</label>
        <queue>CMContractManagement</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CSChemical_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>CS | Chemical</label>
        <queue>CSChemical</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>